--- a/merges/wp8/main.html
+++ b/merges/wp8/main.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-responsive.css"/>
     <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="css/custom.css"/>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css"/>
 </head>
 <body ng-app="app">
@@ -37,6 +36,7 @@
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular/ui-bootstrap-tpls-0.7.0.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular-route.js"></script>
+	<script type="text/javascript" src="lib/angular/angular-touch.js"></script>
 	<script type="text/javascript" src="lib/persist-min.js"></script>
 	<script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
