added blackberry world and windows phone store to list of app stores

--- a/webapp/merges/support.html
+++ b/webapp/merges/support.html
@@ -51,11 +51,10 @@
 <div class="clear">
 	<h2>Dogecoin Balance Wow is available on:</h2>
 	<ul>
-		<!--
-		<li><a href="https://itunes.apple.com/us/app/bitcoin-easy-check/id780336876?ls=1&mt=8">Apple iTunes Store</a></li>
-		-->
 		<li><a href="https://play.google.com/store/apps/details?id=net.edrake.dogecoinbalancewow">Google Play Store (Android)</a></li>
 		<li><a href="http://www.amazon.com/Drake-Emko-Dogecoin-Balance-Wow/dp/B00ISNBWEY">Amazon Kindle Store</a></li>
+		<li><a href="http://www.windowsphone.com/en-us/store/app/dogecoin-balance-wow/9e343cb7-3552-4f7f-9d88-0a0d87c05848">Windows Phone Store</a></li>
+		<li><a href="http://appworld.blackberry.com/webstore/content/53031888/">Blackberry World</a></li>
 		<li><a href="https://chrome.google.com/webstore/detail/dogecoin-balance-wow/mbldbbdmcmpelfakglhfafgiopeepnob">Chrome Web Store</a></li>
 		<li><a href="https://marketplace.firefox.com/app/dogecoin-balance-wow">Firefox Marketplace</a></li>
 	</ul>
