added donations paragraph and strong styling for app name

--- a/webapp/merges/support.html
+++ b/webapp/merges/support.html
@@ -33,7 +33,7 @@
 	<img src="img/dogecoinBalanceWow_128.png" class="logo" alt="Dogecoin Balance Wow logo" title="Dogecoin Balance Wow"/>
 	<h2>Support</h2>
 	<p>
-		Thank you for using Dogecoin Balance Wow! If you have any questions, concerns, or feedback, please contact me at: 
+		Thank you for using <strong>Dogecoin Balance Wow</strong>! If you have any questions, concerns, or feedback, please contact me at: 
 		<dd><strong>drakee (a) gmail.com</strong></dd>
 	</p>
 	<p>
@@ -47,6 +47,11 @@
 		Dogecoin is an open source peer-to-peer <a href="http://en.wikipedia.org/wiki/Cryptocurrency">cryptocurrency</a>, favored by <a href="http://knowyourmeme.com/photos/581722-doge">grammar-impaired</a> <a href="http://en.wikipedia.org/wiki/Shiba_Inu">Shiba Inus</a> worldwide.
 		Check out the <a href="http://dogecoin.com/">Dogecoin website</a> to find out more!
 	</p>
+</div>
+<div>
+	<h2>Donations</h2>
+	<p><strong>Dogecoin Balance Wow</strong> is free to use and ad-free!</p>
+	<p>If you enjoy using it, I gratefully accept DOGE donations at: <strong><span style="color:green">D7AKf9hN4zXkEyHgCNYPR2UP2rEFb3zjJQ</span></strong></p>
 </div>
 <div class="clear">
 	<h2>Dogecoin Balance Wow is available on:</h2>
