optimized support page for better mobile viewing

--- a/webapp/merges/support.html
+++ b/webapp/merges/support.html
@@ -5,8 +5,9 @@
 <style type="text/css">
   body {
 	  font-family:"Comic Sans MS", cursive, sans-serif;
+	  font-size: large;
 	  background-color: white;
-	  width: 75%;
+	  width: 85%;
 	  padding: 10px;
 	  margin:0 auto;
   }
@@ -74,16 +75,16 @@
 				<li>
 					It should give you a list of addresses and balances - for example:
 					<pre>
-	[
-		[
-			["D7AKf9hN4zXkEyHgCNYPR2UP2rEFb3zjJQ", 211.14320600, "Donations"]
-		],
-		[
-			["DDVRyDNFXCppepaBYugEjem5ACGSHFWMAV", 3.02854051],
-			["D6opymN3Pvex3ySWZAYBK24TY1gyHEjcUQ", 28092.00000000, "Purchases"],
-			["D7cUojN3czcyT2MFNhSXMy5DKkzWEg1vmr", 21265.61245768, "Mining"]
-		]
-	]
+ [
+ 	[
+ 		["D7AKf9hN4zXkEyHgCNYPR2UP2rEFb3zjJQ", 211.14320600, "Donations"]
+ 	],
+ 	[
+ 		["DDVRyDNFXCppepaBYugEjem5ACGSHFWMAV", 3.02854051],
+ 		["D6opymN3Pvex3ySWZAYBK24TY1gyHEjcUQ", 28092.00000000, "Purchases"],
+ 		["D7cUojN3czcyT2MFNhSXMy5DKkzWEg1vmr", 21265.61245768, "Mining"]
+ 	]
+ ]
 					</pre>
 					Notice that there is an address, <code>DDVRyDNFXCppepaBYugEjem5ACGSHFWMAV</code> in this case (yours will be different), that was created by the wallet without a label.
 				</li>
