reduced icon size for smaller wp8 phones

--- a/merges/wp8/main.html
+++ b/merges/wp8/main.html
@@ -17,10 +17,10 @@
               <div class="navbar-inner">
                   <div class="container">
                       <ul class="nav">
-                          <li data-match-route="/home" ng-class="getClass('/home')"><a href="#/home"><i class="fa fa-2x fa-home"></i></a></li>
-						  <li data-match-route="/edit" ng-class="getClass('/edit')"><a href="#/edit"><i class="fa fa-2x fa-edit"></i></a></li>
-                          <li data-match-route="/settings" ng-class="getClass('/settings')"><a href="#/settings"><i class="fa fa-2x fa-wrench"></i></a></li>
-						  <li data-match-route="/about" ng-class="getClass('/about')"><a href="#/about"><i class="fa fa-2x fa-info-circle"></i></a></li>
+                          <li data-match-route="/home" ng-class="getClass('/home')"><a href="#/home"><i class="fa fa-lg fa-home"></i></a></li>
+						  <li data-match-route="/edit" ng-class="getClass('/edit')"><a href="#/edit"><i class="fa fa-lg fa-edit"></i></a></li>
+                          <li data-match-route="/settings" ng-class="getClass('/settings')"><a href="#/settings"><i class="fa fa-lg fa-wrench"></i></a></li>
+						  <li data-match-route="/about" ng-class="getClass('/about')"><a href="#/about"><i class="fa fa-lg fa-info-circle"></i></a></li>
 						  <li><a href="javascript:void(0)" ng-click="loadData()"><i class="fa fa-2x fa-refresh" ng-class="loadingClass"></i></a></li>
                       </ul>
                   </div>
