reduced icon size for smaller wp8 screens

--- a/merges/wp8/main.html
+++ b/merges/wp8/main.html
@@ -21,7 +21,7 @@
 						  <li data-match-route="/edit" ng-class="getClass('/edit')"><a href="#/edit"><i class="fa fa-lg fa-edit"></i></a></li>
                           <li data-match-route="/settings" ng-class="getClass('/settings')"><a href="#/settings"><i class="fa fa-lg fa-wrench"></i></a></li>
 						  <li data-match-route="/about" ng-class="getClass('/about')"><a href="#/about"><i class="fa fa-lg fa-info-circle"></i></a></li>
-						  <li><a href="javascript:void(0)" ng-click="loadData()"><i class="fa fa-2x fa-refresh" ng-class="loadingClass"></i></a></li>
+						  <li><a href="javascript:void(0)" ng-click="loadData()"><i class="fa fa-lg fa-refresh" ng-class="loadingClass"></i></a></li>
                       </ul>
                   </div>
               </div>
