improved support page formatting

--- a/webapp/merges/support.html
+++ b/webapp/merges/support.html
@@ -7,7 +7,7 @@
 	  font-family:"Comic Sans MS", cursive, sans-serif;
 	  font-size: large;
 	  background-color: white;
-	  width: 85%;
+	  width: 90%;
 	  padding: 10px;
 	  margin:0 auto;
   }
@@ -23,6 +23,8 @@
   code, pre {
 	  background-color: #b0c4de;
 	  font-weight: 700;
+      padding: 3px;
+      word-wrap: break-word;
   }
 
   .logo {
@@ -51,7 +53,7 @@
 		<dd><strong>drakee (a) gmail.com</strong></dd>
 	</p>
 	<p>
-		If you are experiencing any issues, such as a crash, please let me know anything you can about your device - for example "I'm using a Samsung Galaxy S III phone running Android 4.1.2" or "I'm using an iPhone 5S running iOS7". I appreciate everyone's feedback.
+		If you are experiencing any issues, such as a crash, please let me know anything you can about your device - for example "I'm using a Samsung Galaxy S III phone running Android 4.1.2". I appreciate everyone's feedback.
 	</p>
 </div>
 <div class="clear" id="FAQ">
@@ -76,14 +78,14 @@
 					It should give you a list of addresses and balances - for example:
 					<pre>
  [
- 	[
- 		["D7AKf9hN4zXkEyHgCNYPR2UP2rEFb3zjJQ", 211.14320600, "Donations"]
- 	],
- 	[
- 		["DDVRyDNFXCppepaBYugEjem5ACGSHFWMAV", 3.02854051],
- 		["D6opymN3Pvex3ySWZAYBK24TY1gyHEjcUQ", 28092.00000000, "Purchases"],
- 		["D7cUojN3czcyT2MFNhSXMy5DKkzWEg1vmr", 21265.61245768, "Mining"]
- 	]
+    [
+       ["D7AKf9hN4zXkEyHgCNYPR2UP2rEFb3zjJQ", 211.14320600, "Donations"]
+    ],
+    [
+       ["DDVRyDNFXCppepaBYugEjem5ACGSHFWMAV", 3.02854051],
+       ["D6opymN3Pvex3ySWZAYBK24TY1gyHEjcUQ", 28092.00000000, "Purchases"],
+       ["D7cUojN3czcyT2MFNhSXMy5DKkzWEg1vmr", 21265.61245768, "Mining"]
+    ]
  ]
 					</pre>
 					Notice that there is an address, <code>DDVRyDNFXCppepaBYugEjem5ACGSHFWMAV</code> in this case (yours will be different), that was created by the wallet without a label.
